# DocVault

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/docvault-core/: Cargo.toml
crates/docvault-core/src/: crypto.rs  decoder.rs  encoder.rs  lib.rs  metadata.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx
web/src/components/: BatchDropZone.tsx  BatchFileList.tsx  DropZone.tsx  ImagePreview.tsx  PasswordInput.tsx  ProgressBar.tsx  StatusMessage.tsx
web/src/hooks/: useDocVault.ts
web/src/styles/: index.css
web/src/types/: index.ts
web/src/utils/: aviMuxer.ts
